@startuml

package strategies {
    class BoundaryValueTestingStrategy {
        +TestCases generateBoundaryValueTests(Class<?> clazz)
    }

    class DecisionBasedTestingStrategy {
        +TestCases generateDecisionBasedTests(Object input)
    }

    class EquivalencePartitioningStrategy {
        +TestCases generateEquivalencePartitioningTests(Object input)
    }

    class ExceptionTestingStrategy {
        +TestCases generateExceptionTests(Object input)
        +List<Directive> createExceptionTriggeringDirectives()
    }

    class HappyDayTestingStrategy {
        +TestCases generateHappyDayTests(Object input)
    }

    class RainyDayTestingStrategy {
        +TestCases generateRainyDayTests(Object input)
    }

    BoundaryValueTestingStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
    DecisionBasedTestingStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
    EquivalencePartitioningStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
    ExceptionTestingStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
    HappyDayTestingStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
    RainyDayTestingStrategy ..> testcasegeneration.TestCaseGeneratorFactory : uses
}

@enduml
